SSO changes added

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8080
+server.contextPath=/content-sso
 
 google.openidconnect.client_id=911933532912-vrvtheplr212cq1qpq54dfjs7enibsh2.apps.googleusercontent.com
 google.openidconnect.client_secret=4FtkesNDv4Hd0mmlHw073TR8
 google.openidconnect.auth_uri=https://accounts.google.com/o/oauth2/auth
 google.openidconnect.token_uri=https://accounts.google.com/o/oauth2/token
 google.openidconnect.userinfo_uri=https://www.googleapis.com/oauth2/v3/userinfo
-google.openidconnect.redirect_uri=http://localhost:8080/login
+google.openidconnect.redirect_uri=http://localhost:4200/content-auth
 
 # The sample app will always request the openid scope for you.
 # You can request additional (comma delimited) scopes here.
