--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.contextPath=/content-sso
 
 google.openidconnect.client_id=911933532912-vrvtheplr212cq1qpq54dfjs7enibsh2.apps.googleusercontent.com
 google.openidconnect.client_secret=4FtkesNDv4Hd0mmlHw073TR8
